# MoEJIT-ns3

./: .dockerignore  .gitignore  DOCKER_README.md  Dockerfile  HANDOVER.md  README.md  compile_commands.json  ideal_output.txt  run.sh
.github/workflows/: build_test.yml
scratch/moe-jit/: CMakeLists.txt  COMMANDS_CN.md  analyze_detailed_flows_csv.py  analyze_detailed_flows_full.py  analyze_results.py  analyze_single.py  dml-application.h  dragonfly-test-with-MUSE.cpp  fattree-moe-multijob-test.cpp  fattree-moe-scheduling-test.cpp  fattree-moe-test.cpp  fattree-moe-trace-test.cpp  fattree-test-no-varys-multiapp.cpp  fattree-test-with-hedera-multiapp.cpp  fattree-test-with-varys-multiapp.cpp  moe-jit.h  run_fixed_prob_test.sh  run_multijob_4_full_test.sh  run_multijob_4_test.sh  run_multijob_prob_test.sh  simple-alltoallv-test.cpp  spine-8app.cpp  test-moe-parser-basic.cpp  test-moe-parser-scaling.cpp  test.cpp  utility.cpp  varys.h
scratch/moe-jit/moe-traces/GPT-ep-trace-8-nodes/: ep_trace_20260226_003045_rank1.jsonl  ep_trace_20260226_003048_rank2.jsonl  ep_trace_20260226_003048_rank4.jsonl  ep_trace_20260226_003048_rank6.jsonl  ep_trace_20260226_003048_rank7.jsonl
scratch/moe-jit/moe-traces/bert_trace_64batch_32expert/: ep_trace_20260225_152427_rank2.jsonl  ep_trace_20260225_152427_rank3.jsonl  ep_trace_20260225_152427_rank5.jsonl  ep_trace_20260225_152427_rank6.jsonl  ep_trace_20260225_152427_rank7.jsonl
scratch/moe-jit/moe-traces/new/: ep_trace_20260203_012445_rank1.jsonl  ep_trace_20260203_012447_rank2.jsonl
scratch/moe-jit/moe-traces/test/: ep_trace_20260130_115238_rank2.jsonl
scratch/moe-jit/routing/: fat-tree-topology.h  hedera-routing.cpp  hedera-routing.h  ipv4-routing-utility.h
scratch/moe-jit/shell_file/: dragonfly_scale_factor_0.0001.sh  dragonfly_scale_factor_0.001.sh  dragonfly_scale_factor_0.1.sh  dragonfly_scale_factor_1e-05.sh  dynamic-data.py  fattree_scale_factor_0.0001.sh  fattree_scale_factor_0.001.sh  fattree_scale_factor_0.1.sh  parse-results.py  static-data.py
scratch/moe-jit/topology/: dragonfly-topology.cpp  dragonfly-topology.h  topology.h  utility.h
scratch/moe-jit/traces/bert/: batch_info_to.4.txt  batch_info_to.6.txt
scratch/moe-jit/traces/gpt1/: batch_info_to.4.txt
scratch/moe-jit/traces/gpt2/: batch_info_to.4.txt
scratch/moe-jit/traces/resnet152/: epoch_info_to.6.txt
scratch/net-jit/: analyze_detailed_flows.py  dragonfly-moe-trace-test.cpp  dragonfly-test-no-reconfig.cpp  fattree-moe-centralized-test.cpp  fattree-moe-fixed-prob-test.cpp  fattree-simple-alltoallv-test.cpp  fattree-test-no-reconfig.cpp  fattree-test-with-all2allv.cpp  fattree-test-with-hedera.cpp  main.cpp  main.h  moe-fifo-scheduler.h  moe-trace-parser.h  net-jit-application.h  run_benchmarks.sh  run_multijob_detailed_full_test.sh  run_multijob_detailed_test.sh  spine-128.cpp  spine-leaf-comparison.cpp  spine-leaf-moe-test.cpp  spine-leaf-trace-test.cpp  utility.h
scratch/net-jit/logs/: fixed_prob_summary.csv  multijob_4_full_summary.csv  multijob_4_summary.csv  multijob_prob_summary.csv
scratch/net-jit/logs/detailed_full/: detailed_summary.csv  detailed_summary.txt
scratch/net-jit/moe-traces/GPT-ep-trace-8-nodes/: ep_trace_20260226_003045_rank0.jsonl  ep_trace_20260226_003048_rank3.jsonl  ep_trace_20260226_003048_rank5.jsonl
scratch/net-jit/moe-traces/bert_trace_64batch_32expert/: ep_trace_20260225_152424_rank0.jsonl  ep_trace_20260225_152424_rank1.jsonl  ep_trace_20260225_152427_rank4.jsonl
scratch/net-jit/moe-traces/new/: ep_trace_20260203_012445_rank0.jsonl
scratch/net-jit/moe-traces/test/: ep_trace_20260130_115235_rank0.jsonl  ep_trace_20260130_115235_rank1.jsonl
scratch/net-jit/routing/: hedera-routing-helper.cpp  hedera-routing-helper.h  ipv4-routing-utility.cpp
scratch/net-jit/shell_file/: build_test.py  dragonfly_scale_factor_0.01.sh  fattree_scale_factor_0.01.sh  fattree_scale_factor_1e-05.sh  run_test.py  zero-one-curve.py
scratch/net-jit/topology/: fattree-topology.cpp  fattree-topology.h  spine-leaf-topology.cpp  spine-leaf-topology.h
scratch/net-jit/traces/gpt1/: batch_info_to.6.txt
scratch/net-jit/traces/gpt2/: batch_info_to.6.txt
scratch/net-jit/traces/resnet152/: epoch_info_to.4.txt
src/coroutine/: CMakeLists.txt
src/coroutine/model/: awaitable.h  coroutine-socket.cpp  coroutine-socket.h  operation-trait.h  operation-type.h  operation.h
src/internet/helper/: ipv4-global-routing-helper.cc
src/internet/model/: ipv4-interface.cc  ipv4-interface.h  ipv4-l3-protocol.cc  ipv4.h  tcp-socket-base.cc  tcp-tx-buffer.cc
src/mpi-application/: CMakeLists.txt
src/mpi-application/model/: mpi-application.cpp  mpi-application.h  mpi-communicator.cpp  mpi-communicator.h  mpi-datatype.h  mpi-exception.h  mpi-functions.cpp  mpi-functions.h  mpi-protocol-trait.h  mpi-protocol.h  mpi-util.cpp  mpi-util.h
src/mpi-application/test/: parse_trace.cpp  test.cpp
src/network/model/: socket.h
src/network/utils/: dynamic-queue-limits.cc  dynamic-queue-limits.h  queue.h
src/traffic-control/model/: queue-disc.cc  queue-disc.h
src/wifi/model/: sta-wifi-mac.h
